# rust-ndarray-test

./: Cargo.toml  README.md
python/: main.py
src/: lib.rs  main.rs
src/common/: mod.rs  ndarray_init.rs  utils.rs
