[package]
name = "rust-ndarray-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { versino = "0.15.6", features = ["serde", "approx"] }
ndarray-rand = "0.14.0"
num-traits = "0.2.15"
rand = "0.8.5"
serde = "1.0.151"
serde_derive = "1.0.151"
serde_json = "1.0.89"
